objects/CSS_Solution_Component__c.object
<CustomObject>
    <description>Captures All CSS Components for the Solution</description>
    <fields>
        <fullName>AccountCodeEdit__c</fullName>
        <label>AccountCodeEdit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCodeType__c</fullName>
        <label>AccountCodeType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCodeWs__c</fullName>
        <description>AccountCodeWs field is storing the accountcode value which is coming from webservices</description>
        <label>AccountCodeWs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCode_Call_Status__c</fullName>
        <description>Field for capturing the status of the response from Siebel webservice for each solution component</description>
        <label>AccountCode Call Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCode__c</fullName>
        <label>AccountCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Code</label>
        <referenceTo>FSL_Account_Code__c</referenceTo>
        <relationshipLabel>CSS Solution Components</relationshipLabel>
        <relationshipName>CSS_Solution_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>Action Selected by Technician during repair</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <description>This formula field used for open QSOL link</description>
        <formula>IF(
  AND(NOT(ISBLANK(QSOL_Language__c)), 
  NOT(ISBLANK(QSOL_Description__c))), 
  if(ISPICKVAL(FSL_Service_Order__r.Type__c, &apos;Dealer&apos;) , HYPERLINK(&quot;/evolution/apex/FSL_QSOLpage?id=&quot; + Id, QSOL_Description__c), HYPERLINK(&quot;/apex/FSL_QSOLpage?id=&quot; + Id, QSOL_Description__c)), 
 if(ISPICKVAL(FSL_Service_Order__r.Type__c, &apos;Dealer&apos;) , HYPERLINK(&quot;/evolution/apex/FSL_QSOLpage?id=&quot; + Id, Campaign_Description__c), HYPERLINK(&quot;/apex/FSL_QSOLpage?id=&quot; + Id, Campaign_Description__c)) 
)</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Code__c</fullName>
        <label>Approval Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_Number__c</fullName>
        <label>Authorization Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Account_Formula__c</fullName>
        <formula>IF(AccountCode__c !=null &amp;&amp; AccountCode__c !=&apos;&apos;, AccountCodeType__c + &apos; &apos; + AccountCode__c , AccountCodeEdit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSS_Account_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Claims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS Claims</label>
        <referenceTo>CSS_Claims__c</referenceTo>
        <relationshipLabel>CSS Solution Components</relationshipLabel>
        <relationshipName>CSS_Solution_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_Classic_SJId__c</fullName>
        <formula>IF(Service_Job__c != &apos;&apos;, Service_Job__c,
IF(Solutions__r.FaultCode__r.Job_Order__c != &apos;&apos;, Solutions__r.FaultCode__r.Job_Order__c,  Solutions__r.Symptom__r.Job_Order__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classic Service Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_CoverageType__c</fullName>
        <description>Coverage Type for Account Code</description>
        <label>CSS_CoverageType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Custom_Failure__c</fullName>
        <label>CSS_Custom_Failure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_Failure_Sequence_Number__c</fullName>
        <label>CSS Failure Sequence Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CSS_Primary_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSS Primary Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignLaborPercentage__c</fullName>
        <label>CampaignLaborPercentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignOCPercentage__c</fullName>
        <label>CampaignOCPercentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignPartsPercentage__c</fullName>
        <label>CampaignPartsPercentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignTowingPercentage__c</fullName>
        <label>CampaignTowingPercentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignTravelPercentage__c</fullName>
        <label>CampaignTravelPercentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <label>Campaign Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CertificateNumber__c</fullName>
        <label>CertificateNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_User__c</fullName>
        <label>Change User</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charlength__c</fullName>
        <defaultValue>false</defaultValue>
        <description>turns true if the length of the component name is more than 80 characters</description>
        <label>Charlength</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Claim_FailCode__c</fullName>
        <description>Created field to hold failcode for claims from failure popup</description>
        <formula>TRIM(LEFT(System_Code__c, 2)) + TRIM(LEFT(Component_Code__c, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClaimFailCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <label>Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>---Select One---</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claims_Failure_Select__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Claims Failure Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ComponentCode_Desc__c</fullName>
        <label>ComponentCode_Desc</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Code__c</fullName>
        <label>Component Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Id__c</fullName>
        <description>Captures the Component or Failure ID for the Repair</description>
        <label>Component Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverageLimitExceedMsgSRT_Status__c</fullName>
        <label>CoverageLimitExceedMsgSRT_Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverageLimitExceedMsgSRT__c</fullName>
        <label>CoverageLimitExceedMsgSRT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CoverageLimitExceedMsg_Status__c</fullName>
        <label>CoverageLimitExceedMsg_Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoverageLimitExceedMsg__c</fullName>
        <description>To Store CoverageLimitExceed validation messages to display in ODM box.</description>
        <label>CoverageLimitExceedMsg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CoverageTravelBaseFareExceedMsg__c</fullName>
        <label>CoverageTravelBaseFareExceedMsg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CoverageTravelBaseFareMsgTstatus__c</fullName>
        <label>CoverageTravelBaseFareMsgTstatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoveredLaborHrs__c</fullName>
        <label>CoveredLaborHrs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoveredMealsLodgingAmt__c</fullName>
        <label>CoveredMealsLodgingAmt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoveredOCAmount__c</fullName>
        <label>CoveredOCAmount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoveredPartsQty_Percentage__c</fullName>
        <formula>IF( CSS_Account_Formula__c != NULL, IF(CoveredPartsQty__c != NULL &amp;&amp; VALUE(CoveredPartsQty__c)  &gt; 0, 100, 0), NULL)</formula>
        <label>CoveredPartsQty%</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoveredPartsQty__c</fullName>
        <label>CoveredPartsQty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoveredTowingMiles__c</fullName>
        <label>CoveredTowingMiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoveredTravelBaseFareAmt__c</fullName>
        <label>CoveredTravelBaseFareAmt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoveredTravelLabor__c</fullName>
        <label>CoveredTravelLabor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoveredTravelLabourErrMsg__c</fullName>
        <label>CoveredTravelLabourErrMsg</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CoveredTravelLabourStatus__c</fullName>
        <label>CoveredTravelLabourStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoveredTravelMiles__c</fullName>
        <label>CoveredTravelMiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covered_Labor__c</fullName>
        <label>Covered Labor%</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Covered_Parts__c</fullName>
        <label>Covered Parts%</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_User__c</fullName>
        <label>Create User</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cummins_Fault_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cummins Fault Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.FSL_SMN__c</field>
                <operation>equals</operation>
                <valueField>FSL_Fault_Code__c.FSL_SMN__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FSL_Fault_Code__c</referenceTo>
        <relationshipLabel>CSS Solution Components</relationshipLabel>
        <relationshipName>CSS_Solution_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Failure_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Failure Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>FSL_Failure__c.Failure_Id__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>FSL_Failure__c</referenceTo>
        <relationshipLabel>CSS Solution Components (Custom Failure Name)</relationshipLabel>
        <relationshipName>CSS_Solution_Components1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Take_Possession__c</fullName>
        <label>Did the customer take possession of part</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeductibleAmount__c</fullName>
        <label>DeductibleAmount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVL_DX_Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EVL DX Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>CSS Solution Components (EVL DX Service Order)</relationshipLabel>
        <relationshipName>CSS_Solution_Components1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engine_Family_Code__c</fullName>
        <formula>IF( Service_Job__c&lt;&gt; null , Service_Job__r.Qsol_Engine_Family_Code__c,   CSS_Claims__r.EngineFamilyCode__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engine Family Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equip_ID__c</fullName>
        <formula>Service_Job__r.Equipment_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equip ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Description__c</fullName>
        <formula>Solutions__r.FaultCode__r.Cummins_Fault_Code__r.Name+ &apos; - &apos;  +Solutions__r.FaultCode__r.Cummins_Fault_Code__r.Cummins_Description__c</formula>
        <label>Fault Code Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Type__c</fullName>
        <formula>TEXT(Solutions__r.FaultCode__r.Type__c)</formula>
        <label>FC Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Account_Code__c</fullName>
        <inlineHelpText>FSL Audit Code</inlineHelpText>
        <label>Account Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW PARTS WARRANTY - 62</fullName>
                </value>
                <value>
                    <fullName>PARTS WARRANTY - DEFECT FROM STOCK - 35</fullName>
                </value>
                <value>
                    <fullName>RECON PART - DEFECT FROM STOCK - 41</fullName>
                </value>
                <value>
                    <fullName>RECON PARTS WARRANTY - 97</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTOR WARRANTY - DW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_FA_Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Plan Field Actions</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Campaigns, TRPs, and ATCs</relationshipLabel>
        <relationshipName>FSL_Fieldactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Link__c</fullName>
        <description>To store the QSOL Link</description>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FSL_QSOL_Link__c</fullName>
        <formula>IF(ISBLANK(FSL_Link__c ),&quot;Not Available&quot;,HYPERLINK( FSL_Link__c , &quot;Click here&quot;))</formula>
        <label>QSOL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_SMN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSL SMN</label>
        <referenceTo>FSL_SMN_DTC__c</referenceTo>
        <relationshipLabel>Solution Components</relationshipLabel>
        <relationshipName>CSS_Solution_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Service_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSL Service Job</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Failures Added</relationshipLabel>
        <relationshipName>CSS_Solution_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Field is created for Fieldactions</description>
        <label>All Field Actions</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Campaigns, TRPs, and ATCs</relationshipLabel>
        <relationshipName>Fieldactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FailCode_Formula__c</fullName>
        <formula>IF( Fail_Code__c != null , ( Name +&quot;-&quot; +Fail_Code__c) , Fail_Code_Editable__c)</formula>
        <label>FailCode Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailCode__c</fullName>
        <label>FailCode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailMode_Desc__c</fullName>
        <label>FailMode_Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fail_Code_Editable__c</fullName>
        <description>Fail code formula field is empty, user can enter and save the fail code that code saved into this field.</description>
        <label>Fail Code Editable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fail_Code_Fail_Mode__c</fullName>
        <formula>FailCode__c + Failure_Mode__c</formula>
        <label>Fail Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fail_Code__c</fullName>
        <formula>IF(BEGINS (System_Code__c, &quot;W&quot;), TRIM(LEFT(System_Code__c, 2)) + TRIM(LEFT(Component_Code__c, 2))+ TRIM(LEFT(Failure_Mode__c, 2)), TRIM(LEFT(System_Code__c, 2)) + TRIM(LEFT(Component_Code__c, 2)) )</formula>
        <label>Fail Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fail_Mode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fail Mode</label>
        <referenceTo>FSL_Fail_Mode__c</referenceTo>
        <relationshipLabel>CSS Solution Components</relationshipLabel>
        <relationshipName>CSS_Solution_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Failure_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Predefined Failure Name</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.FSL_SMN__c</field>
                <operation>equals</operation>
                <valueField>FSL_Failure__c.FSL_SMN__c</valueField>
            </filterItems>
            <filterItems>
                <field>FSL_Failure__c.Failure_Id__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>FSL_Failure__c</referenceTo>
        <relationshipLabel>CSS Solution Components</relationshipLabel>
        <relationshipName>CSS_Solution_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Failure_Date__c</fullName>
        <label>Failure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Failure_Measure__c</fullName>
        <defaultValue>&quot;Miles&quot;</defaultValue>
        <label>Failure Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Mode__c</fullName>
        <label>Failure Mode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Point__c</fullName>
        <label>Failure Point</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Failure_Value__c</fullName>
        <formula>IF(NOT(ISBLANK(Failure_Code__c)), IF(NOT(ISBLANK(Failure_Code__r.Failure_Name__c)), Failure_Code__r.Failure_Name__c, Name) + &apos; - &apos; + Failure_Code__r.Name, IF(NOT(ISBLANK(Custom_Failure_Name__c)), IF(NOT(ISBLANK(Custom_Failure_Name__r.Failure_Name__c)), Custom_Failure_Name__r.Failure_Name__c, Name) + &apos; - &apos; + Custom_Failure_Name__r.Name, Name))</formula>
        <label>Failure Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FaultCode_Desc__c</fullName>
        <label>FaultCode_Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <label>Fault Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faultcode_Description__c</fullName>
        <formula>Cummins_Fault_Code__r.Name+ &apos; - &apos; +Cummins_Fault_Code__r.Cummins_Description__c</formula>
        <label>Faultcode/Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Action__c</fullName>
        <formula>IF(ISBLANK(FSL_Link__c ),&quot;Not Available&quot;,HYPERLINK( FSL_Link__c , Type__c+&apos;-&apos;+Component_Id__c+&apos;-&apos;+Campaign_Description__c))</formula>
        <label>Field Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetAccountCodeServiceRun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GetAccountCodeServiceRun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Shop_SRT_Limit_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to map the attribute InShopSrtLimitFlag</description>
        <label>In Shop SRT Limit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Info_Only_Claim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>story 155919</description>
        <label>Info_Only_Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Times__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to map the attributes MultipleTimes</description>
        <label>Multiple Times</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Parts_Returned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created lookup with Service order</description>
        <label>No Global Standard Quote Parts Available</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Parts Without Global Standard Quote Available</relationshipLabel>
        <relationshipName>CSS_Solution_Components2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ODM_Penalty__c</fullName>
        <label>ODM Penalty</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODM_Status_Code__c</fullName>
        <label>ODM_Status_Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODM_Status_Message__c</fullName>
        <label>ODM Status Message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ODM_Status__c</fullName>
        <label>ODM Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YTBV</fullName>
                    <default>true</default>
                    <label>YTBV</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
                <value>
                    <fullName>PASSED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OldSolCompID__c</fullName>
        <label>OldSolCompID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Over_The_Counter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as part of story GSSC-298</description>
        <label>Over The Counter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Warranty_Start_Date__c</fullName>
        <label>Part Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parts_Integration_Status__c</fullName>
        <label>Parts Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parts_Warranty__c</fullName>
        <label>Parts Warranty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Parts Warranty</fullName>
                </value>
                <value>
                    <fullName>Recon Parts Warranty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parts__c</fullName>
        <label>Parts</label>
        <summaryForeignKey>FSL_Parts__c.CSS_Solution_Component__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Pay_Code__c</fullName>
        <label>Pay Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select One</fullName>
                    <default>true</default>
                    <label>Select One</label>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performed_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required to Perform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check if Performed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QSOL_Description__c</fullName>
        <label>QSOL Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QSOL_Language__c</fullName>
        <label>QSOL Language</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity of Parts used in Repair</description>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required_Indicator__c</fullName>
        <description>These field is used to Indicate the images based on the checkbox performed</description>
        <formula>IF( ($Profile.Name = &apos;EVL_Dealer_Advanced&apos; || $Profile.Name = &apos;EVL_Dealer_Technician&apos;) , IF( AND(Performed_Review__c = TRUE,Performed__c = TRUE) , IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/TickMarkPNG.png&quot;, &apos;FA&apos;, 20, 20),
IF( AND(Performed_Review__c == TRUE ,Performed__c == FALSE) , IMAGE(&quot;/evolution/resource/FSL_Images/FSL_Images/WaringIconPNG.png&quot;, &quot;red&quot;, 20, 20),
IF( AND(Performed_Review__c == FALSE,Performed__c == FALSE) , &quot;&quot;,&quot;&quot;)
)
), IF( AND(Performed_Review__c = TRUE,Performed__c = TRUE) , IMAGE(&quot;/resource/FSL_Images/FSL_Images/TickMarkPNG.png&quot;, &apos;FA&apos;, 20, 20),
IF( AND(Performed_Review__c == TRUE ,Performed__c == FALSE) , IMAGE(&quot;/resource/FSL_Images/FSL_Images/WaringIconPNG.png&quot;, &quot;red&quot;, 20, 20),
IF( AND(Performed_Review__c == FALSE,Performed__c == FALSE) , &quot;&quot;,&quot;&quot;)
)
))</formula>
        <label>Required Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check if Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoadRelay_Warranty__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>RoadRelay_Warranty</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To identify the solution component is actual root cause as per story# GSSC-385</description>
        <label>Root Cause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRT_Fetched__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SRT_Fetched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRT_Total__c</fullName>
        <label>SRT Total</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Claim_Type__c</fullName>
        <label>Selected Claim Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Component__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Job for this Component</description>
        <label>Service Job</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipLabel>CSS Solution Components</relationshipLabel>
        <relationshipName>CSS_Solution_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Model__c</fullName>
        <formula>IF( Service_Job__c&lt;&gt; null , Service_Job__r.Service_Model__c,  CSS_Claims__r.Service_Model__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Id__c</fullName>
        <formula>Solutions__r.Name  + &apos; - &apos; +  Solutions__r.Solution_Title__c</formula>
        <label>Solution Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solutions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Solutions linked to the Component</description>
        <label>CSS Solutions</label>
        <referenceTo>CSS_Solutions__c</referenceTo>
        <relationshipLabel>Failure Selected By Technician</relationshipLabel>
        <relationshipName>CSS_Solution_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>